--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=/Users/nghngtran/Library/Android/sdk
-flutter.sdk=/Users/nghngtran/Downloads/flutter
+sdk.dir=C:\\Users\\BINH TRINH\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\Program Files\\Android\\flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
