--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,11 +1,14 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/nghngtran/Downloads/flutter
-FLUTTER_APPLICATION_PATH=/Users/nghngtran/Documents/GitHub/Flutter-Story-App-UI
-FLUTTER_TARGET=/Users/nghngtran/Documents/GitHub/Flutter-Story-App-UI/lib/main.dart
+FLUTTER_ROOT=C:\Program Files\Android\flutter
+FLUTTER_APPLICATION_PATH=E:\Document\Document\2019-2020-HK3\UI\Coffeeholic
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
-SYMROOT=${SOURCE_ROOT}/../build/ios
+SYMROOT=${SOURCE_ROOT}/../build\ios
 OTHER_LDFLAGS=$(inherited) -framework Flutter
-FLUTTER_FRAMEWORK_DIR=/Users/nghngtran/Downloads/flutter/bin/cache/artifacts/engine/ios
+FLUTTER_FRAMEWORK_DIR=C:\Program Files\Android\flutter\bin\cache\artifacts\engine\ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
-TRACK_WIDGET_CREATION=true
+DART_OBFUSCATION=false
+TRACK_WIDGET_CREATION=false
+TREE_SHAKE_ICONS=false
+PACKAGE_CONFIG=.packages
