--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\BINH TRINH\\AppData\\Local\\Android\\Sdk
+sdk.dir=C:/Users/BINH TRINH/AppData/Local/Android/Sdk
 flutter.sdk=C:\\Program Files\\Android\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
