--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_rating_bar: ^3.0.1+1
 #  hexcolor: ^1.0.4
 
   # The following adds the Cupertino Icons font to your application.
