--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,14 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_rating_bar: ^3.0.1+1
+  flutter_spinkit: "^4.1.2"
+  percent_indicator: "^2.1.7+2"
 #  hexcolor: ^1.0.4
 
   # The following adds the Cupertino Icons font to your application.
